--- a/pom.xml
+++ b/pom.xml
@@ -25,24 +25,31 @@
             <artifactId>yasson</artifactId>
             <version>3.0.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.12.0</version>
+        </dependency>
 
         
-<!--         PrimeFaces 
+         <!-- PrimeFaces -->
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>13.0.0</version>
+            <version>14.0.0</version>
+            <classifier>jakarta</classifier>
         </dependency>
 
-         OmniFaces (recommended for JSF utility features) 
+<!--          OmniFaces (recommended for JSF utility features) 
         <dependency>
             <groupId>org.omnifaces</groupId>
             <artifactId>omnifaces</artifactId>
             <version>4.4</version>
-        </dependency>
+        </dependency>-->
         
-         JSTL 
-        <dependency>
+         <!-- JSTL --> 
+<!--        <dependency>
             <groupId>jakarta.servlet.jsp.jstl</groupId>
             <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
             <version>3.0.1</version>
